fix container spacing

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -389,10 +389,11 @@ Full-Width Styles
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  padding: 40px 0 80px 0;
+  padding: 80px 0 80px 0;
 }
 
 .portfolio-item-container.last {
+  padding-top: 40px;
   margin-bottom: 80px;
 }
 
